syntax = "proto3";

package com.google.protos.youtube.api.innertube;

import "browse_continuation.proto";

message ContinuationWrapper {
   // internal id for browse continuation wrapper
   optional BrowseContinuationWrapper browse_continuation = 80226972;
}